<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.vlingo</groupId>
    <artifactId>pipes</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
        <vlingo.version>0.9.1-RC2</vlingo.version>
        <jupiter.version>5.5.2</jupiter.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.vlingo</groupId>
            <artifactId>vlingo-actors</artifactId>
            <version>${vlingo.version}</version>
        </dependency>
        <dependency>
            <groupId>io.vlingo</groupId>
            <artifactId>vlingo-http</artifactId>
            <version>${vlingo.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
